--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=9191
 
 # Config DB
 spring.datasource.url=jdbc:mysql://localhost:3306/test_security
-spring.datasource.username=****
-spring.datasource.password=****
+spring.datasource.username=root
+spring.datasource.password=root
 
 #Hibernate and JPA properties
 spring.jpa.properties.hibernate.format_sql=true
