--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+security.secret-key = 5cc36c8d-6dc6-4721-836c-8d6dc6f721c2
+security.expiration = 86400000
+security.refresh-token = 86400000
